--- a/views/page2.html
+++ b/views/page2.html
@@ -8,6 +8,9 @@
     <!-- links or URLs are always GET resources as they are getting (retrieving) a resource -->
     <a href="/">Home</a>
     <a href="/page1">Page 1</a>
+
+  <!--  firstname=Andrew&lastname=Tark  -->
+
     <form action="/setName" method="POST">
       First name:
       <input type="text" name="firstname" value="">
